--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
                 <h1>
                     All highlights Copa America 2021
                 </h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi saepe reiciendis libero adipisci unde provident dolorem ipsa itaque ratione incidunt!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit a expedita possimus saepe quae aliquam laudantium eaque, veniam tempore dolorem eius mollitia adipisci aliquid iure neque pariatur at autem? Quaerat omnis neque a amet quod animi repellendus perspiciatis, voluptatibus aliquid totam cumque, recusandae vero rerum necessitatibus. Atque doloremque numquam corrupti.
-                </p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi saepe reiciendis libero adipisci unde provident dolorem ipsa itaque ratione incidunt!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit a expedita possimus saepe quae aliquam laudantium eaque, veniam tempore dolorem eius mollitia adipisci aliquid iure neque pariatur at autem?corrupti.
+                </p><br>
                 <a href="">Watch Now <i class="fas fa-arrow-right"></i></a>
             </div>
                 <div class="optional-img half-width">
