--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
 
         <!-- -------------------------
-            headersectio
+            headersection
      ------------------------------------- -->
 
         <header>
@@ -56,7 +56,7 @@
                         <img src="./images/players/player-2.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Lionel Messi</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <img src="./images/players/player-3.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Cristiano Ronaldo</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
                 </div><div class="player">
@@ -73,7 +73,7 @@
                         <img src="./images/players/player-4.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Paulo Dybala</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
                 </div><div class="player">
@@ -81,7 +81,7 @@
                         <img src="./images/players/player-5.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Mesut Ozil</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
                 </div><div class="player">
@@ -89,55 +89,61 @@
                         <img src="./images/players/player-6.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Mauro Icardi</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-7.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Di Maria</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-8.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Kylian Mbappé</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-9.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Mohamed Salah</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-10.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Harry Kane </h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-11.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Kevin De Bruyne</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
-                </div><div class="player">
+                </div>
+                <div class="player">
                     <div class="playre-img">
                         <img src="./images/players/player-12.png" alt="">
                     </div>
                     <div class="player-info">
-                        <h2>Neymar Jr</h2>
+                        <h2>Philippe Coutinho</h2>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime vitae et ad quaerat, odit odio voluptate velit incidunt maiores! Quae.</p>
                     </div>
                 </div>
@@ -154,17 +160,17 @@
                 <h1>
                     All highlights Copa America 2021
                 </h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi saepe reiciendis libero adipisci unde provident dolorem ipsa itaque ratione incidunt!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit a expedita possimus saepe quae aliquam laudantium eaque, veniam tempore dolorem eius mollitia adipisci aliquid iure neque pariatur at autem?corrupti.
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi saepe reiciendis libero adipisci unde provident dolorem ipsa itaque ratione incidunt!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit a expedita possimus saepe quae aliquam laudantium eaque,
                 </p><br>
                 <a href="">Watch Now <i class="fas fa-arrow-right"></i></a>
-            </div>
+            </div><br>
                 <div class="optional-img half-width">
                     <img src="./images/match.png" alt="">
             </div>
         </section>
         <footer>
             <div class="footer-img">
-                <img src="./images/Logo.png" alt="">
+                <img src="./images/Logo.png" width="300px" alt="">
             </div>
             <div class="footer-icon">
                 <i class="fab fa-facebook-square"></i>
